# sparse-map

./: .travis.yml  CMakeLists.txt  README.md  _r_e_a_d_m_e_8md.html  annotated.html  appveyor.yml  classes.html  classtsl_1_1detail__sparse__hash_1_1sparse__hash-members.html  classtsl_1_1detail__sparse__hash_1_1sparse__hash.html  classtsl_1_1detail__sparse__hash_1_1sparse__hash_1_1sparse__iterator-members.html  classtsl_1_1detail__sparse__hash_1_1sparse__hash_1_1sparse__iterator.html  classtsl_1_1sh_1_1mod__growth__policy-members.html  classtsl_1_1sh_1_1mod__growth__policy.html  classtsl_1_1sh_1_1power__of__two__growth__policy-members.html  classtsl_1_1sh_1_1power__of__two__growth__policy.html  classtsl_1_1sh_1_1prime__growth__policy-members.html  classtsl_1_1sh_1_1prime__growth__policy.html  classtsl_1_1sparse__map-members.html  classtsl_1_1sparse__map.html  classtsl_1_1sparse__set-members.html  classtsl_1_1sparse__set.html  dir_4b4deafff36e7cc612a7df4d61a70473.html  dir_5a75f45df5587768cfca46117d7f7a37.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen.conf  files.html  functions.html  functions_0x7e.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_func.html  functions_func_0x7e.html  functions_func_b.html  functions_func_c.html  functions_func_d.html  functions_func_e.html  functions_func_f.html  (+53 more)
.github/workflows/: ci.yml
cmake/: tsl_sparse_mapConfig.cmake.in
include/tsl/: boost_offset_pointer.h  exceptions.h  sparse_growth_policy.h  sparse_hash.h  sparse_map.h  sparse_set.h
tests/: CMakeLists.txt  custom_allocator_tests.cpp  main.cpp  policy_tests.cpp  popcount_tests.cpp  sparse_map_tests.cpp  sparse_set_tests.cpp  utils.h
tests/fancy_pointer/: CustomAllocator.h  sparse_array_tests.cpp  sparse_hash_map_tests.cpp  sparse_hash_set_tests.cpp
tests/scoped_allocator_adaptor/: sparse_array_tests.cpp  sparse_hash_set_tests.cpp
tsl/: sparse_growth_policy.h  sparse_hash.h  sparse_map.h  sparse_set.h
